status-page-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-ingress
  namespace: status
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - status.confuzer.cloud
      secretName: letsencrypt-prod
  rules:
    - host: status.confuzer.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus
                port:
                  number: 8080
